transitions really work this time

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 	game.state.add('menustate', menuState);
     game.state.add('levelonestate', leveloneState);
     game.state.add('leveltwostate', leveltwoState);
+	game.state.add('levelthreestate', levelthreeState);
 	game.state.add('endstate', endState);
-    game.state.add('transitionstate', transitionState);
+    game.state.add('testts', testtsState);
 
     game.state.start('preloadstate');
     
