Level one merged, assets added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/levelthreestate.js"></script>
 	<script type="text/javascript" src="js/testts.js"></script>
 	<script type="text/javascript" src="js/endstate.js"></script>
+    <script type="text/javascript" src="js/infostate.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -25,6 +26,7 @@
 	
 	game.state.add('preloadstate', preloadState);
 	game.state.add('menustate', menuState);
+    game.state.add('infostate', infoState);
     game.state.add('levelonestate', leveloneState);
     game.state.add('leveltwostate', leveltwoState);
 	game.state.add('levelthreestate', levelthreeState);
