Made the arrows scale on instead of fly on for performance issues. Also added between levels text and got rid of the huge spritesheets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-    <title>PHASER</title>
+    <title>THEKLA</title>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/preload.js"></script>
 	<script type="text/javascript" src="js/menustate.js"></script>
